objects/ACHConfigurations__mdt.object
<CustomObject>
    <description>Metadata for all the configs related to ACHConfigurations</description>
    <fields>
        <fullName>ACHFileNamePrefix__c</fullName>
        <description>Prefix which is added to the ach file name</description>
        <label>ACHFileNamePrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AchHoldDays__c</fullName>
        <description>To Hold ACH Transactions</description>
        <label>AchHoldTransactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <description>Bank Name</description>
        <label>BankName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankRoutingNo__c</fullName>
        <description>BankRouting No</description>
        <label>BankRoutingNo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand Description</description>
        <label>Brand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyId__c</fullName>
        <description>Company Id</description>
        <label>CompanyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Company Name</description>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalReserveBankName__c</fullName>
        <description>Federal Reserve Bank Name.</description>
        <inlineHelpText>FederalReserveBankName.</inlineHelpText>
        <label>FederalReserveBankName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalReserveRoutingNo__c</fullName>
        <description>Federal Reserve Routing No.</description>
        <inlineHelpText>FederalReserveRoutingNo.</inlineHelpText>
        <label>FederalReserveRoutingNo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLAccountNo__c</fullName>
        <description>GL Account to be debited for funding Customer Account</description>
        <label>GLAccountNo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLCostCenter__c</fullName>
        <description>GL Cost Center ID</description>
        <label>GL Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImmediateDestinationName__c</fullName>
        <description>Immediate Destination Name</description>
        <label>ImmediateDestinationNam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImmediateDestination__c</fullName>
        <description>Immediate Destination</description>
        <label>ImmediateDestination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImmediateOriginName__c</fullName>
        <description>Immediate Origin Name</description>
        <label>ImmediateOriginName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImmediateOrigin__c</fullName>
        <description>Immediate Origin</description>
        <label>ImmediateOrigin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODFI__c</fullName>
        <description>Originating Depository Financial Institution (ODFI) Id</description>
        <label>ODFI Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginatorStatusCode__c</fullName>
        <description>Originator Status Code</description>
        <label>Originator Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACHConfigurations</label>
    <pluralLabel>ACHConfigurations</pluralLabel>
</CustomObject>